# TeaSpeak

./: .gitignore  .gitmodules  ACKNOWLEDGEMANAGER_API_CHANGES.md  ANALYSIS_README.md  APPLY_FIXES_TO_BUILD.md  CHANNELCONVERSATIONMODE_FIX.md  COMPILATION_ERRORS_ANALYSIS.md  COMPILATION_FIX_GUIDE.md  LIBRARY_VERSION_COMPARISON.md  QUICK_START.md  README.md  fix_json_webapi.py  fix_jsoncpp_stringview.sh  fix_permmaphelper.md
Client-Root/: .gitignore  (+8 more)
Server/Server/: .clang-format  .git-old  .gitignore  .gitmodules  CMakeLists.txt
Server/Server/MusicBot/: CMakeLists.txt  MavStuff.cpp  main.cpp
Server/Server/file/: CMakeLists.txt  todo.txt
Server/Server/license/: CMakeLists.txt  LicenseClientMain.cpp  LicenseCreatorCLI.cpp  LicenseManager.cpp  LicenseServerMain.cpp  MySQLLibSSLFix.c
Server/Server/server/: CMakeLists.txt  CreateEnviroment.txt  MySQLLibSSLFix.c  VersionHelper.sh  dependency_resolver.sh  flood.sh  lock_concept  main.cpp  thread_concept  todo.md  tomcryptTest.cpp  valrgid_supress.txt
Server/rtc/: .gitignore  Cargo.toml  build_glib.sh  build_local_development.sh  generate_shared_library.sh  libteaspeakrtc.version  locking_order.txt  readme.md
Server/rtc/src/: channel.rs  exports.rs  extension.rs  lib.rs  log.rs  sdp.rs  server.rs  threads.rs
Server/teafile/capi/: Cargo.toml
Server/teafile/filelib/: Cargo.toml
Server/teafile/fileserver/: .gitignore  Cargo.toml  config_file_server.yml
TeaSpeak-Client/native/: .gitignore  CMakeLists.txt  create_symbols.sh  relink.sh
TeaSpeak-Client/native/cmake/: nodejs-config.cmake
TeaSpeak-Client/native/codec/: .gitignore  CMakeLists.txt  binding.cc  trace.h
TeaSpeak-Client/native/crash_handler/: CMakeLists.txt  binding.cc
TeaSpeak-Client/native/dns/: CMakeLists.txt  binding.cc  utils.cpp  utils.h
TeaSpeak-Client/native/ppt/: .gitignore  CMakeLists.txt  binding.cc
TeaSpeak-Client/native/serverconnection/: CMakeLists.txt  tsconfig.json
TeaSpeak-Client/native/updater/: CMakeLists.txt  base64.h  config.cpp  config.h  file.cpp  file.h  json.hpp  logger.cpp  logger.h  main.cpp  ui.h  util.cpp  util.h
TeaSpeakLibrary/: CMakeLists.txt  main.cpp
TeaSpeakLibrary-1.4.10/: CMakeLists.txt
TeaSpeakLibrary-1.4.10/src/: BasicChannel.cpp  Definitions.h  Error.cpp  Error.h  EventLoop.h  License.h  PermissionManager.cpp  Properties.cpp  PropertyDefinition.h  linked_helper.h
TeaSpeakLibrary-1.4.10/src/channel/: TreeView.h
TeaSpeakLibrary-1.4.10/src/converters/: converter.h
TeaSpeakLibrary-1.4.10/src/log/: LogSinks.h
TeaSpeakLibrary-1.4.10/src/lookup/: ip.cpp  ip.h  ipv6.h
TeaSpeakLibrary-1.4.10/src/misc/: advanced_mutex.h  base64.cpp  base64.h  cast.h  digest.cpp  digest.h  endianness.h  memtracker.cpp  memtracker.h  sassert.h  scope_guard.h  spin_mutex.h  task_executor.cpp  time.h  utf8.h
TeaSpeakLibrary-1.4.10/src/protocol/: AcknowledgeManager.h  CompressionHandler.cpp  PacketDecoder.cpp  PacketLossCalculator.cpp  PacketStatistics.cpp  RawCommand.h  RtoCalculator.cpp  buffers.cpp  buffers_allocator_a.cpp  buffers_allocator_c.cpp  generation.h  ringbuffer.h
TeaSpeakLibrary-1.4.10/src/qlz/: QuickLZ.cpp  QuickLZ.h
TeaSpeakLibrary-1.4.10/src/query/: command2.cpp  command3.h  command_handler.h  escape.cpp
TeaSpeakLibrary-1.4.10/src/sql/: insert.h
TeaSpeakLibrary-1.4.10/test/: PropertyTest.cpp  rw_lock.cpp
TeaSpeakLibrary/src/: BasicChannel.cpp  BasicChannel.h  Definitions.h  Error.cpp  EventLoop.cpp  EventLoop.h  License.cpp  PermissionManager.cpp  PermissionManager.h  Properties.h  PropertyDefinitions.cpp  Variable.h  linked_helper.cpp
TeaSpeakLibrary/src/ThreadPool/: Mutex.h  Timer.h
TeaSpeakLibrary/src/bbcode/: bbcodes.cpp  bbcodes.h
TeaSpeakLibrary/src/channel/: TreeView.cpp
TeaSpeakLibrary/src/converters/: converter.cpp
TeaSpeakLibrary/src/lock/: rw_mutex.cpp  rw_mutex.h
TeaSpeakLibrary/src/log/: LogSinks.cpp  LogUtils.cpp  LogUtils.h  translation.cpp
TeaSpeakLibrary/src/lookup/: ipv4.h
TeaSpeakLibrary/src/misc/: advanced_mutex.h  base64.h  digest.h  hex.h  ip_router.h  lambda.h  memtracker.cpp  memtracker.h  net.cpp  net.h  rnd.cpp  rnd.h  sassert.h  spin_lock.h  spin_mutex.h  std_unique_ptr.h  strobf.h  task_executor.h  threads.cpp  threads.h  timer.h
TeaSpeakLibrary/src/protocol/: AcknowledgeManager.cpp  CompressionHandler.h  CryptHandler.cpp  CryptHandler.h  Packet.cpp  Packet.h  PacketDecoder.h  PacketLossCalculator.cpp  PacketStatistics.h  PingHandler.cpp  PingHandler.h  RawCommand.cpp  RtoCalculator.h  buffers.h  buffers_allocator_b.cpp  generation.cpp  generation.h  ringbuffer.h
TeaSpeakLibrary/src/qlz/: QuickLZ.h  QuickLZ_L1.cpp  QuickLZ_L2.cpp
TeaSpeakLibrary/src/query/: Command.cpp  Command.h  command3.cpp  command_exception.h  command_unused.h  escape.cpp
TeaSpeakLibrary/src/sql/: SqlQuery.cpp  SqlQuery.h  insert.h
TeaSpeakLibrary/src/ssl/: SSLManager.cpp  SSLManager.h
TeaSpeakLibrary/test/: BBTest.cpp  ChannelTest.cpp  CommandTest.cpp  LinkedTest.cpp  PacketLossCalculateTest.cpp  generationTest.cpp  ip_router.cpp
libraries/ed25519/: .build_win32_amd64.txt  .gitignore  CMakeLists.txt  test.c
libraries/tomcrypt-master/: .build_win32_amd64.txt  CMakeLists.txt  coverity.sh  create_build.sh  helper.pl  libtomcrypt_VS2008.vcproj  makefile  makefile.mingw  makefile.msvc  makefile.shared  makefile.unix  makefile_include.mk  testme.sh  updatemakes.sh
libraries/tommath-develop/: CMakeLists.txt  bn_error.c  bn_fast_mp_invmod.c  bn_fast_mp_montgomery_reduce.c  bn_fast_s_mp_mul_digs.c  bn_fast_s_mp_mul_high_digs.c  bn_fast_s_mp_sqr.c  bn_mp_2expt.c  bn_mp_abs.c  bn_mp_add.c  bn_mp_add_d.c  bn_mp_addmod.c  bn_mp_and.c  bn_mp_clamp.c  bn_mp_clear.c  bn_mp_clear_multi.c  bn_mp_cmp.c  bn_mp_cmp_d.c  bn_mp_cmp_mag.c  bn_mp_cnt_lsb.c  bn_mp_complement.c  bn_mp_copy.c  bn_mp_count_bits.c  bn_mp_div.c  bn_mp_div_2.c  bn_mp_div_2d.c  bn_mp_div_3.c  bn_mp_div_d.c  bn_mp_dr_is_modulus.c  bn_mp_dr_reduce.c  bn_mp_dr_setup.c  bn_mp_exch.c  bn_mp_export.c  bn_mp_expt_d.c  bn_mp_expt_d_ex.c  bn_mp_exptmod.c  bn_mp_exptmod_fast.c  bn_mp_exteuclid.c  bn_mp_fread.c  bn_mp_fwrite.c  (+112 more)
(+3460 files in other folders)
