[package]
name = "teaspeak-webrtc"
version = "0.1.1"
authors = ["WolverinDEV <git@did.science>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
webrtc_lib = { git = "https://github.com/WolverinDEV/rust-webrtc.git" }
lazy_static = "1.4.0"
glib = "0.9"
tokio = { version = "0.2", features = ["full"] }
futures = "0.3.5"
unchecked_unwrap = "2.0.2"
webrtc-sdp = { version = "0.3.6" }
build_timestamp = "0.1.0"
parking_lot = "0.11.0"
num_enum = "0.5.1"
serde = "1.0"
serde_json = "1.0"
slog = "2.5.2"
retain_mut = "0.1.1"
libnice = { git = "https://github.com/WolverinDEV/rust-libnice.git" }
byteorder = "1.3.4"

[lib]
name = "teaspeak_rtc"
crate-type = ["cdylib", "staticlib"]

[dev-dependencies.slog]
features = ["release_max_level_trace", "max_level_trace"]